--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,7 @@ requests==2.31.0
 urllib3==2.2.1
 Werkzeug==3.0.1
 flask_sqlalchemy
-psycopg2
+SQLAlchemy==1.4.31
+requests==2.26.0
+psycopg2-binary==2.9.1
+python-dotenv==0.19.0
