--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ mccabe              ==0.7.0
 oauthlib            ==3.2.2
 packaging           ==24.0
 pip                 ==24.0
-psycopg2            ==2.9.1
+psycopg2
 pycodestyle         ==2.11.1
 pyflakes            ==3.2.0
 python-dotenv       ==0.19.0
