--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ oauthlib            ==3.2.2
 packaging           ==24.0
 pip                 ==24.0
 psycopg2
+psycopg2-binary>=2.8
 pycodestyle         ==2.11.1
 pyflakes            ==3.2.0
 python-dotenv       ==0.19.0
