--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ blinker==1.7.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+flake8==7.0.0
 Flask==3.0.2
 Flask-SQLAlchemy==3.0.5
 gunicorn==21.2.0
@@ -9,9 +10,10 @@ idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
+mccabe==0.7.0
+oauthlib==3.2.2
+packaging==24.0
+psutil==5.9.8
+psycopg2==2.9.9
 psycopg2-binary==2.9.1
-requests==2.31.0
-SQLAlchemy==1.4.31
-typing-extensions==4.10.0
-urllib3==2.2.1
-Werkzeug==3.0.1
+pycodestyle==2.11.1
