--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+# Use the appropriate version range for charset-normalizer to resolve the conflict
+charset-normalizer>=2.0.0,<4.0.0
+
+# Keep the rest of your dependencies unchanged
 blinker==1.7.0
 certifi==2024.2.2
-charset-normalizer==3.3.2
 click==8.1.7
 flake8==7.0.0
 Flask==3.0.2
