--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,6 @@ mccabe==0.7.0
 oauthlib==3.2.2
 packaging==24.0
 psutil==5.9.8
-psycopg2-binary==2.9.1
+psycopg2
 pycodestyle==2.11.1
-requests==2.26.0
+requests
