--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-# Use the appropriate version range for charset-normalizer to resolve the conflict
-charset-normalizer>=2.0.0,<4.0.0
+# Use version ranges to ensure compatibility and flexibility
 
-# Keep the rest of your dependencies unchanged
+charset-normalizer>=2.0.0,<4.0.0
 blinker==1.7.0
 certifi==2024.2.2
 click==8.1.7
@@ -17,6 +16,6 @@ mccabe==0.7.0
 oauthlib==3.2.2
 packaging==24.0
 psutil==5.9.8
-psycopg2
+psycopg2-binary>=2.9.1,<3.0.0  # Version range for psycopg2-binary
 pycodestyle==2.11.1
-requests
+requests>=2.0.0,<3.0.0
