--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,4 @@ psutil==5.9.8
 psycopg2-binary>=2.9.1,<3.0.0  # Version range for psycopg2-binary
 pycodestyle==2.11.1
 requests>=2.0.0,<3.0.0
+python-jose
