--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-# Use version ranges to ensure compatibility and flexibility
-
 charset-normalizer>=2.0.0,<4.0.0
 blinker==1.7.0
 certifi==2024.2.2
@@ -16,7 +14,7 @@ mccabe==0.7.0
 oauthlib==3.2.2
 packaging==24.0
 psutil==5.9.8
-psycopg2-binary>=2.9.1,<3.0.0  # Version range for psycopg2-binary
+psycopg2-binary>=2.9.1,<3.0.0
 pycodestyle==2.11.1
 requests>=2.0.0,<3.0.0
-python-jose
+python-jose>=3.3.0,<4.0.0  # Specified version range for python-jose
